--- a/prices.html
+++ b/prices.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
@@ -36,12 +37,77 @@
 
     <div class="price">
         <div class="card">
-            <div class="card__front">Front</div>
-            <div class="card__back">Back</div>
+            <div class="card__side card__side--front-1">
+                <div class="card__picture card__picture--1">
+                    &nbsp;
+                </div>
+                <h4 class="card__heading">Kids</h4>
+                <div class="card__details">
+                    <ul>
+                        <li>3 Classes per Week</li>
+                        <li>Improve Confidence</li>
+                        <li>Improved School Performance</li>
+                        <li>Improved Athletic Performance</li>
+                        <li>It's Fun!</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card__side card__side--back-1">
+                <div class='back__container'>
+                    <span>Only</span>
+                    <span class="bigger">$70</span>
+                    <span>Montly</span>
+                </div>
+            </div>
         </div>
-        <div class="card">Card 2</div>
-        <div class="card">Card 3</div>
-        <div class="card">Card 4</div>
-        <div class="card">Card 5</div>
+        <div class="card">
+            <div class="card__side card__side--front-2">
+                <div class="card__picture card__picture--2">
+                    &nbsp;
+                </div>
+                <h4 class="card__heading">Gold Pass</h4>
+                <div class="card__details">
+                    <ul>
+                        <li>6 Classes per Week</li>
+                        <li>Boosts Your Energy</li>
+                        <li>Physical and Mental Confidence</li>
+                        <li>Healthy Lifestyle</li>
+                        <li>Improves Muscular Endurance</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card__side card__side--back-2">
+                <div class='back__container'>
+                    <span>Only</span>
+                    <span class="bigger">$115</span>
+                    <span>Montly</span>
+                </div>
+            </div>
+        </div>
+        
+        <div class="card">
+            <div class="card__side card__side--front-3">
+                <div class="card__picture card__picture--3">
+                    &nbsp;
+                </div>
+                <h4 class="card__heading">Standard Pass</h4>
+                <div class="card__details">
+                    <ul>
+                        <li>4 Classes per Week</li>
+                        <li>Burns Calories Efficiently</li>
+                        <li>Heart-Healthy</li>
+                        <li>Improves Your Mobility</li>
+                        <li>Helps You Rest Easier</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card__side card__side--back-3">
+                <div class='back__container opt-2'>
+                    <span>Only</span>
+                    <span class="bigger">$80</span>
+                    <span>montly</span>
+                </div>
+            </div>
+        </div>
     </div>
 </html>
