--- a/prices.html
+++ b/prices.html
@@ -26,7 +26,7 @@
                 <ul class="navbar__menu-items">
                     <li class="navbar__menu-item active"><a href="index.html" class="navbar__menu-link">Home</a></li>
                     <li class="navbar__menu-item"><a href="#" class="navbar__menu-link active">Prices</a></li>
-                    <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">Schedules</a></li>
+                    <li class="navbar__menu-item"><a href="schedules.html" class="navbar__menu-link">Schedules</a></li>
                     <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">About Us</a></li>
                     <li class="navbar__menu-item"><a href="join.html" class="navbar__menu-link">Join Now</a></li>
                 </ul>
@@ -53,10 +53,11 @@
                 </div>
             </div>
             <div class="card__side card__side--back-1">
-                <div class='back__container'>
+                <div class='card__back--container'>
                     <span>Only</span>
-                    <span class="bigger">$70</span>
-                    <span>Montly</span>
+                    <span class="card__bigger">$70</span>
+                    <span class="mb-sm">Montly</span>
+                    <button class="btn" onclick="window.location.href='join.html';">Join Now</button>
                 </div>
             </div>
         </div>
@@ -77,10 +78,11 @@
                 </div>
             </div>
             <div class="card__side card__side--back-2">
-                <div class='back__container'>
+                <div class='card__back--container'>
                     <span>Only</span>
-                    <span class="bigger">$115</span>
-                    <span>Montly</span>
+                    <span class="card__bigger">$115</span>
+                    <span class="mb-sm">Montly</span>
+                    <button class="btn" onclick="window.location.href='join.html';">Join Now</button>
                 </div>
             </div>
         </div>
@@ -102,10 +104,11 @@
                 </div>
             </div>
             <div class="card__side card__side--back-3">
-                <div class='back__container opt-2'>
+                <div class='card__back--container card__back--opt-2'>
                     <span>Only</span>
-                    <span class="bigger">$80</span>
-                    <span>montly</span>
+                    <span class="card__bigger">$80</span>
+                    <span class="mb-sm">Montly</span>
+                    <button class="btn" onclick="window.location.href='join.html';">Join Now</button>
                 </div>
             </div>
         </div>
