--- a/schedules.html
+++ b/schedules.html
@@ -16,7 +16,6 @@
     </head>
 
     <body class="container">
-        
         <div class="navbar">
             <div class="navbar__name">
                 Grande City Crossfit
@@ -24,27 +23,16 @@
 
             <nav class="navbar__menu">
                 <ul class="navbar__menu-items">
-                    <li class="navbar__menu-item active"><a href="#" class="navbar__menu-link active">Home</a></li>
+                    <li class="navbar__menu-item active"><a href="index.html" class="navbar__menu-link">Home</a></li>
                     <li class="navbar__menu-item"><a href="prices.html" class="navbar__menu-link">Prices</a></li>
-                    <li class="navbar__menu-item"><a href="schedules.html" class="navbar__menu-link">Schedules</a></li>
+                    <li class="navbar__menu-item"><a href="#" class="navbar__menu-link active">Schedules</a></li>
                     <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">About Us</a></li>
                     <li class="navbar__menu-item"><a href="join.html" class="navbar__menu-link">Join Now</a></li>
                 </ul>
             </nav>
             <button class="nav-btn"></button>
         </div>
-
-        <header class="header">
-            <div class="header__text">
-                <div class="header__text-1">
-                    are you ready to
-                </div>
-                <div class="header__text-2">
-                    get fit, strong & <br> motivated!
-                </div>
-            </div>
-            <button class="btn" onclick="window.location.href='join.html';">Join Now</button>
-        </header>
-
     </body>
+
+    <div class="">Join Now</div>
 </html>
