--- a/join.html
+++ b/join.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;700&family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
@@ -25,7 +25,7 @@
                 <ul class="navbar__menu-items">
                     <li class="navbar__menu-item active"><a href="index.html" class="navbar__menu-link">Home</a></li>
                     <li class="navbar__menu-item"><a href="prices.html" class="navbar__menu-link">Prices</a></li>
-                    <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">Schedules</a></li>
+                    <li class="navbar__menu-item"><a href="schedules.html" class="navbar__menu-link">Schedules</a></li>
                     <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">About Us</a></li>
                     <li class="navbar__menu-item"><a href="join.html" class="navbar__menu-link active">Join Now</a></li>
                 </ul>
@@ -34,5 +34,63 @@
         </div>
     </body>
 
-    <div class="">Join Now</div>
+    <div class="join">
+        <div class="join__container">
+            <form class="form">
+                <div class="form__group">
+                    <input class="form__input" type="text" placeholder="Full Name" id="name" required/>
+                    <label class="form__label">Full Name</label>
+                </div>
+                <div class="form__group">
+                    <input class="form__input" type="email" placeholder="Email Address" id="email" required/>
+                    <label class="form__label">Email Address</label>
+                </div>
+                <div class="form__group mb-sm">
+                    <div class="join__heading-2">Select Pass</div>
+                    <div class="form__radio-group">
+                        <input type="radio" class="form__radio-input" id="kids" name="pass">
+                        <label for="kids" class="form__radio-label">
+                            <span class="form__radio-button"></span>
+                            Kids
+                        </label>
+                    </div>
+
+                    <div class="form__radio-group">
+                        <input type="radio" class="form__radio-input" id="standard" name="pass">
+                        <label for="standard" class="form__radio-label">
+                            <span class="form__radio-button"></span>
+                            Standard
+                        </label>
+                    </div>
+
+                    <div class="form__radio-group">
+                        <input type="radio" class="form__radio-input" id="golden" name="pass">
+                        <label for="golden" class="form__radio-label">
+                            <span class="form__radio-button"></span>
+                            Golden
+                        </label>
+                    </div>
+                </div>
+                <div class="form__group mb-sm">
+                    <div class="join__heading-2">Select Date and Time</div>
+                    <div class="form__date">
+                        <input type="date" />
+                    </div>
+                    <select class="form__time">
+                        <option value="5:30am">5:30am</option>
+                        <option value="8:30am">8:30am</option>
+                        <option value="9:30am">9:30am</option>
+                        <option value="4:30pm">4:30pm</option>
+                        <option value="5:30pm">5:30pm</option>
+                        <option value="6:30pm">6:30pm</option>
+                    </select>
+                </div>
+                <button class="btn">Join</button>
+            </form>
+            <div class="join__motivation">
+                The voice in your head that says you can't do this
+                <span>is a liar</span>
+            </div>
+        </div>
+    </div>
 </html>
