--- a/prices.html
+++ b/prices.html
@@ -27,7 +27,7 @@
                     <li class="navbar__menu-item active"><a href="index.html" class="navbar__menu-link">Home</a></li>
                     <li class="navbar__menu-item"><a href="#" class="navbar__menu-link active">Prices</a></li>
                     <li class="navbar__menu-item"><a href="schedules.html" class="navbar__menu-link">Schedules</a></li>
-                    <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">About Us</a></li>
+                    <li class="navbar__menu-item"><a href="aboutus.html" class="navbar__menu-link">About Us</a></li>
                     <li class="navbar__menu-item"><a href="join.html" class="navbar__menu-link">Join Now</a></li>
                 </ul>
             </nav>
