--- a/schedules.html
+++ b/schedules.html
@@ -26,7 +26,7 @@
                     <li class="navbar__menu-item active"><a href="index.html" class="navbar__menu-link">Home</a></li>
                     <li class="navbar__menu-item"><a href="prices.html" class="navbar__menu-link">Prices</a></li>
                     <li class="navbar__menu-item"><a href="#" class="navbar__menu-link active">Schedules</a></li>
-                    <li class="navbar__menu-item"><a href="#" class="navbar__menu-link">About Us</a></li>
+                    <li class="navbar__menu-item"><a href="aboutus.html" class="navbar__menu-link">About Us</a></li>
                     <li class="navbar__menu-item"><a href="join.html" class="navbar__menu-link">Join Now</a></li>
                 </ul>
             </nav>
