--- a/join.html
+++ b/join.html
@@ -25,7 +25,7 @@
                 <ul class="navbar__menu-items">
                     <li class="navbar__menu-item active"><a href="index.html" class="navbar__menu-link">Home</a></li>
                     <li class="navbar__menu-item"><a href="prices.html" class="navbar__menu-link">Prices</a></li>
-                    <li class="navbar__menu-item"><a href="schedules.html" class="navbar__menu-link">Schedules</a></li>
+                    <li class="navbar__menu-item"><a href="schedules.html" class="navbar__menu-link">Gallery</a></li>
                     <li class="navbar__menu-item"><a href="aboutus.html" class="navbar__menu-link">About Us</a></li>
                     <li class="navbar__menu-item"><a href="join.html" class="navbar__menu-link active">Join Now</a></li>
                 </ul>
