--- a/schedules.html
+++ b/schedules.html
@@ -11,6 +11,8 @@
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+        <script src="https://kit.fontawesome.com/dde3cdfdf7.js" crossorigin="anonymous"></script>
         
         <title>Grande City Crossfitg</title>
     </head>
@@ -25,7 +27,7 @@
                 <ul class="navbar__menu-items">
                     <li class="navbar__menu-item active"><a href="index.html" class="navbar__menu-link">Home</a></li>
                     <li class="navbar__menu-item"><a href="prices.html" class="navbar__menu-link">Prices</a></li>
-                    <li class="navbar__menu-item"><a href="#" class="navbar__menu-link active">Schedules</a></li>
+                    <li class="navbar__menu-item"><a href="#" class="navbar__menu-link active">Gallery</a></li>
                     <li class="navbar__menu-item"><a href="aboutus.html" class="navbar__menu-link">About Us</a></li>
                     <li class="navbar__menu-item"><a href="join.html" class="navbar__menu-link">Join Now</a></li>
                 </ul>
@@ -34,5 +36,104 @@
         </div>
     </body>
 
-    <div class="">Join Now</div>
+    <div class="gallery">
+        <div class="gallery__container mb-md">
+            <figure class="gallery__item gallery__item--1">
+                <img src="img/gallery1.png" class="gallery__img">
+            </figure>
+            <figure class="gallery__item gallery__item--2">
+                <img src="img/gallery2.jpg" class="gallery__img">
+            </figure>
+            <figure class="gallery__item gallery__item--3">
+                <img src="img/gallery3.jpg" class="gallery__img">
+            </figure>
+            <figure class="gallery__item gallery__item--4">
+                <img src="img/gallery4.jpg" class="gallery__img">
+            </figure>
+            <figure class="gallery__item gallery__item--5">
+                <img src="img/gallery5.jpg" class="gallery__img">
+            </figure>
+            <button class="btn gallery__button">Full Gallery</button>
+        </div>
+        <div class="gallery__comments">
+            <div class="gallery__comment mb-md">
+                <div class="gallery__comment--stars">
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                </div>
+                <div class="gallery__comment--comment">
+                    "This gym has helped me in so many way, physically & mental health. This gym & the people here are my therapy! I don’t see how this gym has 1 stars when the owners and everyone is so kind & always willing to help everyone. Make sure to contact them for a free class to check out this healing gym. Thank you Grande City CrossFit! You changed my life!""
+                </div>
+                <div class="gallery__comment--name">
+                    - Samantha H
+                </div>
+            </div>
+
+            <div class="gallery__comment">
+                <div class="gallery__comment--stars">
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                </div>
+                <div class="gallery__comment--comment">
+                    "Grande City is an amazing place to get your WOD on. Coaches are awesome, facility is clean with updated equipment and plenty of room. It is a challenging and encouraging environment."
+                </div>
+                <div class="gallery__comment--name">
+                    - Daniel L
+                </div>
+            </div>
+
+            <div class="gallery__comment">
+                <div class="gallery__comment--stars">
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span class="gallery__icon">
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                </div>
+                <div class="gallery__comment--comment">
+                    "Life changing for me! Love the coaches and community. Would highly recommend to anyone looking to take their fitness to the next level..."
+                </div>
+                <div class="gallery__comment--name">
+                    - Paul D
+                </div>
+            </div>
+        </div>
+        <button class="btn mb-md">Full Reviews</button>
+    </div>
 </html>
