--- a/schedules.html
+++ b/schedules.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
 
-            <div class="gallery__comment">
+            <div class="gallery__comment mb-md">
                 <div class="gallery__comment--stars">
                     <span class="gallery__icon">
                         <i class="fa-solid fa-star"></i>
