--- a/join.html
+++ b/join.html
@@ -30,7 +30,22 @@
                     <li class="navbar__menu-item"><a href="join.html" class="navbar__menu-link active">Join Now</a></li>
                 </ul>
             </nav>
-            <button class="nav-btn"></button>
+            <div class="navbar__icon">
+                <input type="checkbox" class="navbar__checkbox" id="navi-toggle"/>
+                <label for="navi-toggle" class="navbar__label">
+                    MENU
+                </label>
+                <div class="navbar__background">&nbsp;</div>
+                <nav class="navbar__nav">
+                    <ul class="navbar__list">
+                        <li class="navbar__item active"><a href="index.html" class="navbar__menu-link">Home</a></li>
+                        <li class="navbar__item"><a href="prices.html" class="navbar__menu-link">Prices</a></li>
+                        <li class="navbar__item"><a href="schedules.html" class="navbar__menu-link">Gallery</a></li>
+                        <li class="navbar__item"><a href="aboutus.html" class="navbar__menu-link">About Us</a></li>
+                        <li class="navbar__item"><a href="#" class="navbar__menu-link active">Join Now</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </body>
 
