--- a/prices.html
+++ b/prices.html
@@ -32,12 +32,27 @@
                     <li class="navbar__menu-item"><a href="join.html" class="navbar__menu-link">Join Now</a></li>
                 </ul>
             </nav>
-            <button class="nav-btn"></button>
+            <div class="navbar__icon">
+                <input type="checkbox" class="navbar__checkbox" id="navi-toggle"/>
+                <label for="navi-toggle" class="navbar__label">
+                    MENU
+                </label>
+                <div class="navbar__background">&nbsp;</div>
+                <nav class="navbar__nav">
+                    <ul class="navbar__list">
+                        <li class="navbar__item active"><a href="index.html" class="navbar__menu-link">Home</a></li>
+                        <li class="navbar__item"><a href="#" class="navbar__menu-link active">Prices</a></li>
+                        <li class="navbar__item"><a href="schedules.html" class="navbar__menu-link">Gallery</a></li>
+                        <li class="navbar__item"><a href="aboutus.html" class="navbar__menu-link">About Us</a></li>
+                        <li class="navbar__item"><a href="join.html" class="navbar__menu-link">Join Now</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </body>
 
     <div class="price">
-        <div class="card">
+        <div class="card card__1">
             <div class="card__side card__side--front-1">
                 <div class="card__picture card__picture--1">
                     &nbsp;
@@ -62,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <div class="card">
+        <div class="card card__2">
             <div class="card__side card__side--front-2">
                 <div class="card__picture card__picture--2">
                     &nbsp;
@@ -88,7 +103,7 @@
             </div>
         </div>
         
-        <div class="card">
+        <div class="card card__3">
             <div class="card__side card__side--front-3">
                 <div class="card__picture card__picture--3">
                     &nbsp;
