--- a/schedules.html
+++ b/schedules.html
@@ -149,6 +149,8 @@
                 </div>
             </div>
         </div>
-        <button class="btn mb-md">Full Reviews</button>
+        <a href="https://www.google.com/search?q=grandecity+crossfit+casa+grande&rlz=1C1GCEJ_enUS1037US1037&oq=grandecity+crossfit+casa+grande&gs_lcrp=EgZjaHJvbWUyCwgAEEUYChg5GKABMgkIARAhGAoYoAEyCQgCECEYChigATIHCAMQIRiPAtIBCDY2ODFqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8#ip=1&lrd=0x872a675b30820f41:0x48a858e4a92e7466,1,,,," target="_blank">
+            <button class="btn mb-md">Full Reviews</button>
+        </a>
     </div>
 </html>
