--- a/schedules.html
+++ b/schedules.html
@@ -68,7 +68,9 @@
             <figure class="gallery__item gallery__item--5">
                 <img src="img/gallery5.jpg" class="gallery__img">
             </figure>
-            <button class="btn gallery__button">Full Gallery</button>
+            <a href="https://www.google.com/search?q=grandecity+crossfit+casa+grande&rlz=1C1GCEJ_enUS1037US1037&oq=grandecity+crossfit+casa+grande&gs_lcrp=EgZjaHJvbWUyCwgAEEUYChg5GKABMgkIARAhGAoYoAEyCQgCECEYChigATIHCAMQIRiPAtIBCDY2ODFqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8#ip=1&lpg=cid:CgIgAQ%3D%3D,ik:CAoSLEFGMVFpcE53Z0FXeXBHSnRRZDA1WEdnWWR5RTZyZ3Z2eERYb0lCeU9oYi13" target="_blank">
+                 <button class="btn gallery__button">Full Gallery</button>
+            </a>
         </div>
         <div class="gallery__comments">
             <div class="gallery__comment mb-md">
